--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 <body>
 <header>
   <nav class="navbar navbar-default ">
-  <div class="container">
+  <div class="container-fluid">
     <div class="navbar-header">
+    <a class="navbar-brand" href="index.html">Food, LLC</a>
       <button type="button" class="navbar-toggle collapsed visible-xs" data-toggle="collapse" data-target="#colapsing-navi" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Food, LLC</a>
-    </div>
+          </div>
     <div id="colapsing-navi" class="collapse navbar-collapse">
        <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
         <li>
@@ -39,9 +39,9 @@
   </div>
   </nav>
   </header> <!--end of header-->
-    <div id="main-page container"> 
+    <div id="main-page container-fluid"> 
     <h1 class="text-center">Our Menu</h1>
-      <section class="row"> <!--3col grid starts here! -->
+      <section class="row"> <!--3 row grid starts here! -->
           <div class="col-md-12 col-sm-12 col-xs-12">
             <div id="item-cont">
               <h2 id="sec-head">Chicken</h2>
